Bug 787534 -  Remove Portrait and Landscape special ScreenOrientation values. r=jlebar